# python-baseproject

./: README.md  bootstrap_project.py  bp.py  pyproject.toml
basep/: basep_arguments.py  basep_aux.py  basep_consts.py  basep_help.py
src/baseproject/: baseproject.py
src/baseproject/base/: arguments.py  consts.py  help.py  helpers.py
