[project]
name = "baseproject"
version = "0.0.0"
description = "A template for Python 3 command-line applications"
authors =  [
    {name = "author", email = "author@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
baseproject = "baseproject.baseproject:main"

[tool.poetry]
packages = [
    {include = "baseproject", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
